add_executable(IIItest WIN32
    Animation.cpp
    Animation.h
    base.cpp
    BasicTypes.h
    Building.cpp
    Building.h
    Camera.cpp
    Camera.h
    CarCtrl.cpp
    CarCtrl.h
    Clock.cpp
    Clock.h
    Clouds.cpp
    Clouds.h
    Coronas.cpp
    Coronas.h
    CMakeLists.txt
    Collision.cpp
    Collision.h
    config.h
    Debug.cpp
    DebugDraw.cpp
    DebugDraw.h
    Draw.cpp
    Draw.h
    Dummy.cpp
    Dummy.h
    DummyObject.cpp
    DummyObject.h
    DummyPed.cpp
    DummyPed.h
    Entity.cpp
    Entity.h
    FileLoader.cpp
    FileMgr.cpp
    FileMgr.h
    Game.cpp
    Game.h
    gl3main.cpp
    HandlingDataMgr.cpp
    HandlingDataMgr.h
    III.h
    Lists.cpp
    Lists.h
    misc.cpp
    ModelIndices.cpp
    ModelIndices.h
    ModelInfo.cpp
    ModelInfo.h
    NodeName.cpp
    ObjectData.cpp
    ObjectData.h
    Pad.cpp
    Pad.h
    PathFind.cpp
    PathFind.h
    PedStats.cpp
    PedType.cpp
    Physical.cpp
    Physical.h
    Placeable.cpp
    Placeable.h
    Pools.cpp
    Pools.h
    Rect.h
    References.cpp
    References.h
    Renderer.cpp
    Renderer.h
    Sprite.cpp
    Sprite.h
    SurfaceTable.cpp
    SurfaceTable.h
    streaming.cpp
    streaming.h
    TempColModels.cpp
    TempColModels.h
    templates.h
    Test.cpp
    Test.h
    TimeCycle.cpp
    TimeCycle.h
    Timer.cpp
    Timer.h
    Treadable.cpp
    Treadable.h
    TxdStore.cpp
    TxdStore.h
    VisibilityPlugins.cpp
    VisibilityPlugins.h
    WaterLevel.cpp
    WaterLevel.h
    Weather.cpp
    Weather.h
    winmain.cpp
    World.cpp
    World.h
    zones.cpp
    zones.h
    )

target_link_libraries(IIItest
    PRIVATE
        librw
    )

if(LIBRWGTA_INSTALL)
    install(TARGETS IIItest
        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
        )
endif()
